# picho

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: publish.yml
picho/: __init__.py  config.md  config.py  logger.py
picho/agent/: README.md  README_zh.md  __init__.py  agent.py  loop.py  types.py
picho/api/: README.md  README_zh.md  __init__.py  composition.py  schemas.py  server.py
picho/builtin/: README.md  README_zh.md  __init__.py  decorator.py  security.py
picho/builtin/tool/: bash.py  (+4 more)
picho/cli/: README.md  README_zh.md  __init__.py  chat.py  config.py  confirmation.py  init.py  main.py  security_callback.py  telemetry.py  tui.md  tui.py
picho/observability/: README.md  README_zh.md  __init__.py  exporter.py  otel.py  serialize.py
picho/provider/: README.md  README_zh.md  __init__.py  stream.py  types.py
picho/runner/: README.md  README_zh.md  __init__.py  runner.py
picho/session/: README.md  README_zh.md  __init__.py  compaction.py  manager.py  raw.py  types.py
picho/skills/: README.md  README_zh.md  __init__.py  frontmatter.py  loader.py  types.py
picho/tool/: README.md  README_zh.md  __init__.py  custom.py  executor.py  truncate.py  types.py
tests/: README.md  README_zh.md  test_audio_asr.py  test_bash_tool.py  test_cli_tui_config.py  test_edit_write_tool.py  test_instructions_files.py  test_path_config.py  test_provider_models.py  test_raw_session.py  test_read_tool.py  test_runner_agent.py  test_runner_create_session.py  test_session_manager.py  test_skills_loader.py
(+28 files in other folders)
